src/deploy/kubernetes/infra/06_addons/oidc/oauth2-proxy/application/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: ${_Values_app_name}
  name: ${_Values_app_name}
  namespace: ${_Release_namespace}
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
