src/deploy/kubernetes/infra/06_addons/oidc/oauth2-proxy/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oidc

spec:
  tls:
    - hosts:
        - kubernetes
      secretName: server-certificate-secret
  rules:
    - host: kubernetes
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
